--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <div class="one">
+            <div class="header">
+                <p class="header-logo">Header Logo</p>
+                <ul class="header-link">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+            </div>
+            <div class="hero">
+                <div class="left">
+                    <p class="hero-main-text">This website is awesome</p>
+                    <p class="hero-secondary-text">This website has some subtext that goes here 
+                        under the main title. It's a smaller font and the color is lower 
+                        contrast</p>
+                    <div class="button">Sign up</div>
+                </div>
+                <p class="image-placeholder">this is a placeholder for an image</p>
+            </div>
+        </div>
     </body>
 </html>
