Move placeholder image into div

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
                         contrast</p>
                     <div class="button">Sign up</div>
                 </div>
-                <p class="image-placeholder">this is a placeholder for an image</p>
+                <div class="image-placeholder">
+                    <p>this is a placeholder for an image</p>
+                </div>
             </div>
         </div>
     </body>
