Add HTML for section 2

--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
                 </div>
             </div>
         </div>
+        <div class="two">
+            <p class="information-header-text">Some random information.</p>
+            <div class="illustration-list">
+                <div class="illustration-container">
+                    <div class="illustration-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="illustration-container">
+                    <div class="illustration-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="illustration-container">
+                    <div class="illustration-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="illustration-container">
+                    <div class="illustration-placeholder"></div>
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
