--- a/index.html
+++ b/index.html
@@ -6,50 +6,54 @@
     </head>
     <body>
         <div class="one">
-            <div class="header">
-                <p class="header-logo">Header Logo</p>
-                <ul class="header-link">
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
-                </ul>
-            </div>
-            <div class="hero">
-                <div class="left">
-                    <p class="hero-main-text">This website is awesome</p>
-                    <p class="hero-secondary-text">This website has some subtext that goes here 
-                        under the main title. It's a smaller font and the color is lower 
-                        contrast</p>
-                    <div class="button">Sign up</div>
+            <div class="one-container">
+                <div class="header">
+                    <p class="header-logo">Header Logo</p>
+                    <ul class="header-link">
+                        <li>header link one</li>
+                        <li>header link two</li>
+                        <li>header link three</li>
+                    </ul>
                 </div>
-                <div class="image-placeholder">
-                    <p>this is a placeholder for an image</p>
+                <div class="hero">
+                    <div class="left">
+                        <p class="hero-main-text">This website is awesome</p>
+                        <p class="hero-secondary-text">This website has some subtext that goes here 
+                            under the main title. It's a smaller font and the color is lower 
+                            contrast</p>
+                        <div class="button">Sign up</div>
+                    </div>
+                    <div class="image-placeholder">
+                        <p>this is a placeholder for an image</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="two">
-            <p class="information-header-text">Some random information.</p>
-            <div class="illustration-list">
-                <div class="illustration-container">
-                    <div class="illustration-placeholder"></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="illustration-container">
-                    <div class="illustration-placeholder"></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="illustration-container">
-                    <div class="illustration-placeholder"></div>
-                    <p>this is some subtext under an illustration or image</p>
-                </div>
-                <div class="illustration-container">
-                    <div class="illustration-placeholder"></div>
-                    <p>this is some subtext under an illustration or image</p>
+            <div class="two-container">
+                <p class="information-header-text">Some random information.</p>
+                <div class="illustration-list">
+                    <div class="illustration-container">
+                        <div class="illustration-placeholder"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="illustration-container">
+                        <div class="illustration-placeholder"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="illustration-container">
+                        <div class="illustration-placeholder"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
+                    <div class="illustration-container">
+                        <div class="illustration-placeholder"></div>
+                        <p>this is some subtext under an illustration or image</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="three">
-            <div class="quote-container">
+            <div class="three-container">
                 <p class="quote">This is an inspiring quote, or a testimonial from a customer. 
                     Maybe it's just filling up space, or maybe people will actually read it. Who 
                     knows? All I know is that it looks nice.
