Add HTML for section 4

--- a/index.html
+++ b/index.html
@@ -61,5 +61,16 @@
                 <p class="quote-source">-Thor, God of Thunder</p>
             </div>
         </div>
+        <div class="four">
+            <div class="four-container">
+                <div>
+                    <p class="action-text">Call to action! It's time!</p>
+                    <p class="signup-text">Sign up for our product by clicking that button right over there!</p>
+                </div>
+                <div class="button2">
+                    Sign up
+                </button>
+            </div>
+        </div>
     </body>
 </html>
