--- a/index.html
+++ b/index.html
@@ -69,8 +69,11 @@
                 </div>
                 <div class="button2">
                     Sign up
-                </button>
+                </div>
             </div>
+        </div>
+        <div class="footer">
+            <p>Copyright © The Odin Project 2021</p>
         </div>
     </body>
 </html>
